...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FoodOriginWhite"
    tools:context=".DisplayMapActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/FoodOriginOrange"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"
        app:contentInsetStartWithNavigation="0dp"
...
