...
    <string name="info_title">Informations lieu de fabrication</string>
    <string name="know_more_title">Détails sur le lieu de fabrication</string>
    <string name="adress"><![CDATA[<b>Adresse :</b>]]> %1$s</string>
    <string name="name"><![CDATA[<b>Industriel :</b>]]> %1$s</string>
    <string name="wip">WORK IN PROGRESS</string>
    <string name="know_more">En savoir plus</string>
    <string name="loading_dialog_message">Chargement en cours…</string>
    <string name="txt_scan_tile">Scanner une estampille</string>
    <string name="txt_search_tile">Saisir une estampille</string>
    <string name="txt_hisotry_tile">Historique</string>
    <string name="txt_look_around_tile">Autour de vous</string>
    <string name="txt_empty_history">L\'historique est vide</string>
    <string name="txt_delete_history">Supprimer l\'historique</string>
...
