...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FoodOriginWhite"
    android:backgroundTint="@color/FoodOriginWhite">

    <!--<ImageView
        android:id="@+id/tuto_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tuto_image" />-->
...
        android:id="@+id/textEmptyHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_empty_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/listView"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/buttonDeleteHistory"
        android:layout_width="wrap_content"
...
