...
    android:fitsSystemWindows="true"
    android:id="@+id/main_container"
    android:background="@color/FoodOriginWhite"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:elevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/FoodOriginOrange"
        android:layoutDirection="rtl"
        app:contentInsetStartWithNavigation="0dp"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="bottom" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/helpButton"
        android:elevation="16dp"
        android:layout_width="56dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="@color/FoodOriginOrange"
        android:focusable="true"
...
